# performance-tests-gatling

./: .gitignore  CHAOS.md  EXPERIMENT.md  README.md  docker-compose.profile.yml  docker-compose.proxy.yml  docker-compose.yml  experiment-raw-speed-tests-pre-process.sh  experiment-raw-speed-tests-run.sh  experiment-tracker-exporter-tests-run-docker.sh  experiment-tracker-exporter-tests-run.sh  experiment.md  generate-plan.sh  maikel-test-distribution.sh  maikel-test-pre-process.sh  maikel-test.sh  pom.xml  run-all.sh  run-simulation.sh  test-connection-reuse.sh  test-query.sql  workflows-check.sh  workflows-download.sh  workflows-pre-process.sh
.gatling/: package.conf
.github/workflows/: other-tests.yaml  tracker-performance-buildjet-schedule.yml  tracker-performance-buildjet-shared.yml  tracker-performance-buildjet.yml  tracker-performance-gatling-enterprise-plugin.yml  tracker-performance-gatling-enterprise.yml  tracker-performance-tests.yml  tracker-performance-ubuntu-play-shared.yml  tracker-performance-ubuntu-play.yml  tracker-performance-ubuntu-schedule.yml  tracker-performance-ubuntu-shared.yml  tracker-performance-ubuntu.yml  tracker-tests.yaml
dashboard/: README.md  index.html
dashboard/css/: style.css
dashboard/data/: test_structure.json
dashboard/js/: main.js  visualization_plotly.js
docker/: Dockerfile.postgres  Dockerfile.proxy  nginx-proxy.conf  proxy.go  toxiproxy.json
experiment-analysis/: README.md  analysis.ipynb  pyproject.toml
src/main/java/org/dhis/model/: Expectation.java  Expectations.java  Fixture.java  Scenario.java  (+2 more)
src/test/resources/: config.properties  gatling.conf
src/test/resources/test-scenarios/hmis/: analytics-en-query-4-speed-get-test.json  analytics-en-query-speed-get-test.json  analytics-ev-aggregate-speed-get-test.json  analytics-ev-query-speed-get-test.json  analytics-outliers-speed-get-test.json  analytics-speed-get-test.json  analytics-te-query-speed-get-test.json  outliers-speed-get-test.json  system-speed-get-test.json  tracker-speed-get-check-test.json  tracker-speed-get-enrollment-test.json  tracker-speed-get-event-in-date-range-test.json  tracker-speed-get-event-test.json  tracker-speed-get-te-test.json  tracker-speed-get-test.json
src/test/resources/test-scenarios/sierra-leone/: analytics-en-query-speed-get-test.json  analytics-ev-query-speed-get-test.json  analytics-te-query-speed-get-test.json  sl-speed-get-test.json  system-speed-get-test.json  tracker-speed-get-test.json
stats/: .gitignore  GATLING.md  README.md  dash_app.py  gstat.py  gstats.py  percentiles.py  pyproject.toml
(+9 files in other folders)
