[project]
name = "experiment-analysis"
version = "0.1.0"
description = "Performance test reliability experiment analysis with boxplots"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.0.0",
    "plotly>=5.0.0",
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
    "numpy>=1.24.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.1",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"