[project]
name = "gatling-percentiles"
version = "0.1.0"
description = "Calculate percentiles from Gatling simulation.csv using T-Digest algorithm"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.0.0",
    "tdigest>=0.5.0",
    "plotly>=5.0.0",
    "kaleido>=0.2.1",
    "numpy>=1.24.0",
]

[project.scripts]
percentiles = "percentiles:main"

[tool.uv]
package = true

[tool.setuptools]
py-modules = ["percentiles"]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.1",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
