[project]
name = "gatling-statistics"
version = "0.1.0"
description = "Calculate and plot statistics from Gatling simulation.csv"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.0.0",
    "tdigest>=0.5.0",
    "plotly>=5.0.0",
    "kaleido>=0.2.1",
    "numpy>=2.3.0",
    "argcomplete>=3.0.0",
]

[project.scripts]
gstat = "gstat:main"

[tool.uv]
package = true

[tool.setuptools]
py-modules = ["gstat"]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.1",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
